--- a/style.css
+++ b/style.css
@@ -15,14 +15,15 @@
   font-family: "Kumbh Sans", sans-serif;
 }
 
-body {
+main {
   background: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
+  padding: 3rem 0;
 }
 
 .container {
   /* outline: 1px solid black; */
   max-width: 90%;
-  margin: 3rem auto;
+  margin: 0 auto;
 }
 
 .heroImg {
@@ -59,6 +60,7 @@ body {
 
 .col {
   margin-bottom: 1rem;
+  cursor: pointer;
 }
 
 .box {
@@ -67,8 +69,18 @@ body {
   margin-bottom: 1.5rem;
 }
 
+.questionAnswer {
+  flex-basis: 95%;
+}
+
+.arrowIconDiv {
+  flex-basis: 5%;
+  text-align: center;
+}
+
 .arrowIcon {
   cursor: pointer;
+  width: 70%;
 }
 
 .arrowIconRotate {
@@ -106,17 +118,21 @@ p {
 }
 
 @media (min-width: 81.25rem) {
-  body {
+  main {
+    outline: 1px solid red;
     min-height: 100vh;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .container {
     max-width: 60rem;
     display: flex;
-    background-color: white;
     border-radius: 1.5rem;
-    margin-top: 5.5rem;
-    margin-bottom: 5.5rem;
+    margin: 0;
+    padding: 2rem;
   }
 
   .heroImg {
@@ -126,8 +142,9 @@ p {
     align-items: center;
     background-image: url("./images/bg-pattern-desktop.svg");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     background-position: center;
+    background-color: white;
     /* margin-left: -2rem; */
   }
 
@@ -152,7 +169,6 @@ p {
 
   .faq {
     flex-basis: 60%;
-    width: 100%;
     margin-top: 0;
     padding: 3rem;
     border-radius: 0;
@@ -160,7 +176,7 @@ p {
     border-bottom-right-radius: 1.5rem;
   }
 
-  .col {
-    width: 100%;
+  .questionAnswer {
+    padding: 0 1rem;
   }
 }
