--- a/style.css
+++ b/style.css
@@ -15,192 +15,102 @@
   font-family: "Kumbh Sans", sans-serif;
 }
 
-main {
+body {
   background: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
-  padding: 3rem 0;
+  min-height: 100vh;
 }
 
 .container {
   /* outline: 1px solid black; */
   max-width: 90%;
-  margin: 0 auto;
+  margin: 3rem auto;
 }
 
-.heroImg {
-  /* outline: 1px solid red; */
-  text-align: center;
+.imgDivMobile {
+  width: 100%;
 }
 
-.desktop {
-  display: none;
-}
-
-.womenOnlineMobile {
-  margin-right: 2rem;
-}
-
-.background {
-  margin-top: -10rem;
-  margin-left: 2rem;
+.imgMobile {
+  width: 90%;
+  background-image: url(./images/bg-pattern-mobile.svg);
+  background-repeat: no-repeat;
+  background-position: right 0.8rem bottom -0.1rem;
 }
 
 .faq {
-  /* outline: 1px solid blue; */
-  border-radius: 1.5rem;
+  margin-top: -6.5rem;
+  padding: 7rem 1rem 3rem 1rem;
   background-color: white;
-  margin-top: -7rem;
-  padding: 8rem 1.2rem 2rem 1.2rem;
+  border-radius: 1.5rem;
 }
 
 .faq h1 {
   text-align: center;
-  color: var(--darkDesBlue);
-  margin-bottom: 2rem;
-}
-
-.col {
-  margin-bottom: 1rem;
-  cursor: pointer;
-}
-
-.col:hover .arrowIcon {
-  transform: rotate(180deg);
+  margin-bottom: 2.5rem;
 }
 
 .box {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 1.5rem;
+  margin-top: 1.5rem;
 }
 
-.questionAnswer {
-  flex-basis: 95%;
-}
-
-.question {
-  transition: 0.3s;
-}
-
-.question:hover {
-  color: var(--softRed);
-}
-
-.arrowIconDiv {
-  flex-basis: 5%;
-  text-align: center;
-}
-
-.arrowIcon {
-  cursor: pointer;
-  width: 70%;
-  transition: 0.3s;
-}
-
-.arrowIconRotate {
-  transform: rotate(180deg);
-}
-
-p {
+.box p {
   font-size: 0.88rem;
-  font-size: 400;
   color: var(--darkGrayBlue);
 }
 
-.changeColor {
+.questionAnswer {
+  margin-bottom: 0.5rem;
+}
+
+.questionArrow {
+  /* outline: 1px solid black; */
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  padding: 0.1rem 0;
+}
+
+.questionArrow:hover .question {
   color: var(--darkDesBlue);
-  font-weight: 700;
+}
+
+.question {
+  transition: 0.5s ease-in-out;
+}
+
+.question.bold {
+  font-weight: 600;
+  color: var(--darkDesBlue);
+}
+
+.arrowIcon {
+  flex-basis: 5%;
+  transition: 0.3s;
+}
+
+.arrowIcon.rotate {
+  transform: rotate(180deg);
 }
 
 .answer {
-  display: none;
-  margin-top: 1rem;
+  /* outline: 1px solid red; */
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-in-out;
+  color: var(--dark-grey-blue);
 }
 
-.showAnswer {
-  display: block;
+.border {
+  height: 2px;
+  background-color: var(--lightGrayishBlue);
 }
 
-.borderBottom {
-  border: 1px solid var(--lightGrayishBlue);
-}
+/***** MEDIA QUERIES *****/
 
-@media (min-width: 25rem) {
+@media (min-width: 23.5rem) {
   .container {
-    max-width: 22.5rem;
-  }
-}
-
-@media (min-width: 81.25rem) {
-  main {
-    min-height: 100vh;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .container {
-    max-width: 55rem;
-    display: flex;
-    border-radius: 1.5rem;
-    margin: 0;
-    flex-basis: 100%;
-  }
-
-  .heroImg {
-    flex-basis: 40%;
-    display: flex;
-    justify-items: center;
-    align-items: center;
-    background-image: url("./images/bg-pattern-desktop.svg");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    background-color: white;
-    border-top-left-radius: 1.5rem;
-    border-bottom-left-radius: 1.5rem;
-  }
-
-  .mobile {
-    display: none;
-  }
-
-  .desktop {
-    display: block;
-    position: relative;
-  }
-
-  .womenOnlineDesktop {
-    max-width: 100%;
-  }
-
-  .boxDesktop {
-    position: absolute;
-    top: 6rem;
-    left: -4rem;
-    animation: moveUp 4.5s ease-in-out infinite alternate;
-  }
-
-  @keyframes moveUp {
-    0% {
-      transform: translateY(0);
-    }
-
-    50% {
-      transform: translateY(-20px);
-    }
-  }
-
-  .faq {
-    flex-basis: 60%;
-    margin-top: 0;
-    padding: 3rem;
-    border-radius: 0;
-    border-top-right-radius: 1.5rem;
-    border-bottom-right-radius: 1.5rem;
-  }
-
-  .questionAnswer {
-    padding: 0 1rem;
+    max-width: 21.094rem;
   }
 }
