Few changes added

--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ body {
   background-position: right 0.8rem bottom -0.1rem;
 }
 
+.boxImg {
+  display: none;
+}
+
 .faq {
   margin-top: -6.5rem;
   padding: 7rem 1rem 3rem 1rem;
@@ -112,5 +116,80 @@ body {
 @media (min-width: 23.5rem) {
   .container {
     max-width: 21.094rem;
+  }
+}
+
+@media (min-width: 75rem) {
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem 0;
+  }
+
+  .container {
+    max-width: 55rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    background-color: white;
+    border-radius: 1.5rem;
+    box-shadow: 1px 10px 100px 1px rgba(0, 0, 0, 0.5);
+  }
+
+  .imgDiv {
+    /* outline: 1px solid red; */
+    flex-basis: 40%;
+    position: relative;
+    background-image: url("./images/bg-pattern-desktop.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: left -2rem top 0;
+    padding: 2rem 0;
+  }
+
+  .imgDivMobile {
+    display: none;
+  }
+
+  .imgDivDesktop {
+    /* outline: 1px solid green; */
+    background-image: url("./images/illustration-woman-online-desktop.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: left -3rem top 0rem;
+    height: 300px;
+  }
+
+  .boxImg {
+    display: block;
+    position: absolute;
+    left: -5rem;
+    top: 35%;
+    animation: moveUp 4.5s ease-in-out infinite alternate;
+  }
+
+  @keyframes moveUp {
+    0% {
+      transform: translateY(0);
+    }
+
+    50% {
+      transform: translateY(-20px);
+    }
+  }
+
+  .faq {
+    flex-basis: 60%;
+    border-radius: 0;
+    margin-top: 0rem;
+    padding: 2rem;
+    border-top-right-radius: 1.5rem;
+    border-bottom-right-radius: 1.5rem;
+  }
+
+  .faq h1 {
+    text-align: left;
   }
 }
